# flow-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP_AGENTIC.md  flow-engine-public.sln  fmt.sh
.claude/: settings.json
.claude/rules/: conventional-commits.md  documentation-on-features.md  enterprise-coding-standards.md  rule-sync.md  testing-requirements.md
.cursor/rules/: documentation-on-features.mdc  formatting.mdc  research-before-decisions.mdc  rule-sync.mdc  rust-project-structure.mdc  testing-requirements.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-wheels.yml
crates/cleargate-adapters/: Cargo.toml  README.md
crates/cleargate-adapters/src/: adapter.rs  langchain.rs  langgraph.rs  lib.rs  semantic_kernel.rs  types.rs
crates/cleargate-dotnet/: Cargo.toml  README.md
crates/cleargate-dotnet/src/: engine_ffi.rs  lib.rs
crates/cleargate-flow-engine/: Cargo.toml  README.md
crates/cleargate-flow-engine/src/: dylib.rs  errors.rs  expression.rs  lib.rs  node_ctx.rs  schema.rs  subflow_registry.rs  tool_registry.rs  traits.rs  validate.rs  versioning.rs  write_event.rs  write_handle.rs  write_pipeline.rs
crates/cleargate-flow-engine/src/defaults/: env_secrets.rs  file_flow_store.rs  file_run_store.rs  file_tag_store.rs  in_memory_queue.rs  in_memory_run_store.rs  in_memory_state.rs  mod.rs  otel_provider.rs  reconstruct.rs  redactor.rs
crates/cleargate-flow-engine/src/engine/: builder.rs  error.rs  mod.rs
crates/cleargate-flow-engine/src/executor/: edges.rs  fanout.rs  mod.rs  node.rs  run.rs
crates/cleargate-flow-engine/src/mcp/: client.rs  discovery.rs  mod.rs  server.rs  transport.rs  types.rs
crates/cleargate-flow-engine/src/memory/: config.rs  mod.rs  strategy.rs  token_counter.rs
crates/cleargate-flow-engine/src/multi_agent/: blackboard.rs  handoff.rs  mod.rs
crates/cleargate-flow-engine/src/nodes/: conditional.rs  context_management.rs  csv_tool.rs  http_node.rs  human_in_loop.rs  jq_node.rs  json_lookup.rs  llm_call.rs  mcp_call.rs  mod.rs  subflow.rs  supervisor.rs  tool_router.rs  worker.rs
crates/cleargate-flow-engine/src/observer/: mod.rs  session.rs
crates/cleargate-flow-engine/src/runtime/: config.rs  mod.rs  session.rs
crates/cleargate-flow-engine/src/triggers/: cron_trigger.rs  dispatcher.rs  flow_trigger.rs  http_trigger.rs  mod.rs  runner.rs
crates/cleargate-flow-engine/src/types/: execution.rs  graph.rs  llm.rs  mod.rs  triggers.rs
crates/cleargate-node/: Cargo.toml  README.md
crates/cleargate-node/src/: adapters.rs  engine.rs  execution.rs  lib.rs  llm_provider.rs  node_handler.rs  runtime.rs  session.rs
crates/cleargate-providers/: Cargo.toml  README.md
crates/cleargate-providers/src/: anthropic.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs  openai_compatible.rs  pricing.rs  traits.rs
crates/cleargate-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/cleargate-python/python/cleargate/: __init__.py  langchain.py  langgraph.py  sdk_wrapper.py  semantic_kernel.py
crates/cleargate-python/src/: adapters.rs  engine.rs  execution.rs  lib.rs  llm_provider.rs  node_handler.rs  runtime.rs  session.rs
crates/cleargate-python/tests/: test_adapters.py  test_integration.py  test_langchain_handler.py  test_sdk_wrapper.py  test_sk_filter.py  test_smoke.py
crates/cleargate-storage-oss/: Cargo.toml  README.md
crates/cleargate-storage-oss/src/: lib.rs
crates/cleargate-storage-oss/src/migrations/: m20260215_000002_flow_engine_tables.rs  m20260216_000001_flow_tags.rs  mod.rs
crates/cleargate-storage-oss/src/models/: flow_head.rs  flow_tag.rs  flow_version.rs  mod.rs  run_event.rs
crates/cleargate-storage-oss/src/stores/: mod.rs  seaorm_flow_store.rs  seaorm_run_store.rs  seaorm_tag_store.rs
crates/test-echo-node/: Cargo.toml
crates/test-echo-node/src/: lib.rs
dotnet/Cleargate/: Cleargate.csproj  CleargateException.cs  InstrumentedChatCompletionService.cs  ObserverSession.cs  README.md  SemanticKernelFilter.cs
dotnet/Cleargate.Tests/: Cleargate.Tests.csproj  OllamaIntegrationTests.cs
examples/: README.md
examples/data-analyst/: sales.csv
examples/flow-engine-agents/: README.md
examples/flow-engine-agents/data-analyst/: flow.json
examples/flow-engine-agents/tests/: agent-loop.cleargate-test.toml
examples/inventory-agent/: flow.json  products.json
examples/math-agent/: flow.json
examples/observability/: README.md
examples/observability/dotnet/: .gitignore  BasicObserve.cs  CleargateExamples.csproj  Program.cs  README.md  SemanticKernelExample.cs  ToolCallExample.cs  setup.sh
examples/observability/node/: .gitignore  README.md  package-lock.json  package.json  setup.sh
examples/observability/node/src/: advanced_agent_example.ts  basic_observe.ts  langchain_example.ts  langgraph_example.ts
examples/observability/python/: .gitignore  README.md  advanced_agent_example.py  basic_observe.py  langchain_example.py  langgraph_example.py  pyproject.toml  semantic_kernel_example.py  semantic_kernel_full_example.py
examples/orchestration/dotnet/: BasicFlow.cs  Cleargate.Orchestration.Examples.csproj  ExecuteGraph.cs  Program.cs  README.md
examples/orchestration/flows/: echo-flow.json  simple-responder.json
examples/orchestration/node/: README.md
examples/orchestration/node/src/: 01_basic_flow.ts  02_streaming_events.ts  03_execute_graph.ts
examples/orchestration/python/: 01_basic_flow.py  02_streaming_events.py  03_custom_node.py  04_custom_llm_provider.py  05_execute_graph.py  README.md
examples/story-writer/: flow.json
sdks/: README.md
sdks/dotnet/: .gitignore  README.md
sdks/dotnet/Cleargate/: AdapterSession.cs  Engine.cs  InstrumentedChatCompletionService.cs  Native.cs  ObserverSession.cs  README.md  SemanticKernelFilter.cs
sdks/dotnet/Cleargate.Tests/: FullCaptureTests.cs  OllamaIntegrationTests.cs  SessionApiTests.cs
sdks/node/: package.json
sdks/node/src/: engine.ts  index.ts  native.ts
sdks/node/src/handlers/: langchain.ts  (+2 more)
