[package]
name = "cleargate-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
cleargate-flow-engine = { path = "../cleargate-flow-engine" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
