[package]
name = "cleargate-dotnet"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["engine"]
engine = []

[dependencies]
cleargate-flow-engine = { path = "../cleargate-flow-engine" }
cleargate-adapters = { path = "../cleargate-adapters" }
cleargate-storage-oss = { path = "../cleargate-storage-oss" }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
