[package]
name = "cleargate-flow-engine"
version.workspace = true
edition.workspace = true

[features]
default = ["dylib", "jq", "cron", "http-node", "mcp", "structured-output", "dynamic-tools", "memory", "multi-agent"]
dylib = []
jq = []
cron = []
http-node = []
mcp = []
dynamic-tools = []
schemars = ["dep:schemars"]
structured-output = ["dep:jsonschema"]
memory = []
multi-agent = []
test-support = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing (for content-addressed versioning)
sha2 = { workspace = true }

# Tracing
tracing = { workspace = true }

# CSV parsing
csv = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# HTTP client (used by executor core + HTTP/MCP nodes)
reqwest = { workspace = true }

# Dylib plugin loading (used unconditionally by dylib module)
libloading = { workspace = true }

# Cron scheduling (used unconditionally by trigger system)
cron = { workspace = true }

# JQ expression evaluation (used unconditionally by jq node)
jq-rs = { workspace = true }

# Feature-gated dependencies
schemars = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
wiremock = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
cleargate-storage-oss = { path = "../cleargate-storage-oss" }

[lib]
name = "cleargate_flow_engine"
path = "src/lib.rs"
